      cleaning customization. 

      \item The Bioconductor \sQuote{version} used by
      \code{setRepositories()} can now be set by environment variable
      \env{R_BIOC_VERSION} at runtime, not just when \R is installed.
      (It has been stated that Bioconductor will switch from version
      2.14 to version 3.0 during the lifetime of the \R 3.1 series.)
    }
  }

  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item The included version of PCRE has been updated to 8.35.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item When \code{attach()} notices conflicts, it does so
      compatibly with \code{library()}, using \code{message()}.

      \item \command{R CMD Sweave} no longer cleans any files,
      compatibly with versions of \R prior to 3.1.0.

      \item \code{dbinom(x,n)}, \code{pbinom()}, \code{dpois()}, etc,
      are slightly less restrictive in checking if \code{n} is
      integer-valued.  (Wish of \PR{15734}.)

      \item \code{pchisq(x, df, ncp, log.p = TRUE)} is more accurate and
      no longer underflows for small \code{x} and \code{ncp < 80}, e.g,
      for \code{pchisq(1e-5, df = 100, ncp = 1, log = TRUE)}.
      (Based on \PR{15635} and a suggestion by Roby Joehanes.)
      
      \item The \code{s} (\dQuote{step into}) command in the debugger 
      would cause \R to step into expressions evaluated there,
      not just into functions being debugged.  (\PR{15770})

      \item The third-party code used by \code{strptime()} rejected
      time-zone offsets of more than \code{+1200}. (\PR{15768})

      \item (Windows only.)
      \code{png(type = "cairo", antialias = "gray")}
      was not accepted.  ((\PR{15760}))
      
      \item Use of \code{save(..., envir=)} with named objects could
      fail.  (\PR{15758})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.1.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{type.convert()} (and hence by default